fix the demo on safari image load latency (#26)

--- a/example/src/DemoObject.css
+++ b/example/src/DemoObject.css
@@ -15,7 +15,7 @@
   width: 90%;
 }
 
-.demo-small-logo {
+.demo-small-logo svg {
   width: 20%;
 }
 
